<resources>
    <string name="app_name">Tablero</string>
    <string name="email">Email</string>
    <string name="contrasena">Password</string>
    <string name="login">Login</string>
    <string name="NoTienesCuenta"><u>Not a member?</u></string>
    <string name="Nombre">Name</string>
    <string name="jugar">Play!</string>
    <string name="registrarse">Sign up!</string>
    <string name="Tiradas">Rolls:</string>
    <string name="Victoria">Victory</string>
    <string name="Puntuacion">Score:</string>
</resources>