<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="302dp"
        android:layout_height="183dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="40dp"
        app:srcCompat="@drawable/logo_oca_fondo_transparente_500" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/email"
        android:textColor="@color/Letra"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_below="@+id/tvEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="textEmailAddress"
        android:textColor="@color/Letra"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvContrasena"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/contrasena"
        android:textColor="@color/Letra"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_below="@+id/tvContrasena"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="textPassword"
        android:textColor="@color/Letra"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:layout_below="@+id/txtContrasena"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="40dp"

        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/AmarilloClaro"
        android:fontFamily="@font/acme"
        android:text="@string/login"
        android:textColor="@color/Letra"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="306dp"
        android:layout_height="47dp"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="48dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/NoTienesCuenta"
        android:textColor="#2196F3"
        android:textSize="16sp" />

</RelativeLayout>