<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="230dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        app:srcCompat="@drawable/adventure_chest_logo_text_only_6dfcffd8__1_" />

    <TextView
        android:id="@+id/tvEmailRegistro"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/email"
        android:textColor="@color/Nueva_letra_azul"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtEmailRegistro"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_below="@+id/tvEmailRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="Example@example.com"
        android:inputType="textPersonName"
        android:textColor="@color/Nueva_letra_azul"
        android:textColorHint="@color/Azul_Hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvNombreRegistro"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_below="@+id/txtEmailRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Nombre"
        android:textColor="@color/Nueva_letra_azul"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtNombreRegistro"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_below="@+id/tvNombreRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="Alex"
        android:inputType="textPersonName"
        android:textColor="@color/Nueva_letra_azul"
        android:textColorHint="@color/Azul_Hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvContrasena_registro"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_below="@+id/txtNombreRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/contrasena"
        android:textColor="@color/Nueva_letra_azul"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:layout_below="@+id/tvContrasena_registro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="textPassword"
        android:textColor="@color/Nueva_letra_azul"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Naranja_color_secundario"
        android:fontFamily="@font/acme"
        android:onClick="registrousuario"
        android:text="@string/registrarse"
        android:textColor="@color/Nueva_letra_azul"
        android:textSize="34sp" />

</RelativeLayout>